refactor: Add builders and factory methods to DTOs - Manual builders for MarketSearchResultDTO, StockHistoryDTO, MetadataDTOs - Factory methods: build(), crypto(), stock(), etf()